Improve GPS tracking precision
